# rStar

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml  requirements.txt
common/: arguments.py  utils.py
data_preprocess/: aime2024_rstar2_agent_loop.py  dapo_rstar2_agent_loop.py
eval_src/: Evaluator.py  do_eval.py
eval_src/toolkit_for_MATH/: latex_answer_check.py  metamath_utils.py
examples/: aime_eval.sh  chat_with_tool_call.py  math500_eval.sh  run_qwen3-14b_rstar2_agent_weave.sh
fused_compute_score/: __init__.py
models/: HuggingFace_API.py  IO_System.py  OpenAI_API.py  vLLM_API.py
rstar2-agent/: __init__.py  main_rstar2_agent.py  requirements.txt  run_qwen3-14b_rstar2_agent_weave.sh
rstar2-agent/down_sample/: reject_sampling.py  roc.py  utils.py
rstar2-agent/tools/: __init__.py  code_judge_utils.py  request_processor.py
rstar2_agent/: main_rstar2_agent.py  rstar2_agent_ray_trainer.py
rstar2_agent/config/: rstar2_agent_trainer.yaml
rstar2_agent/down_sample/: __init__.py  reject_sampling.py
rstar2_agent/reward/: server.py
rstar2_agent/rollout/: __init__.py  rstar2_agent_loop.py
rstar2_agent/tools/: code_judge_tool.py  tool_parser.py
run_src/: MCTS_backbone.py  MCTS_for_reasoning.py  do_discriminate.py  do_generate.py  rstar_utils.py
scripts/: run_gsm8k_discriminator.sh  run_gsm8k_generator.sh
